--- a/styles/content.css
+++ b/styles/content.css
@@ -47,8 +47,7 @@ div.wrap.blue {
 }
 
 div.wrap.blue div.css_sprite_container.upper {
-	margin: 0;
-	padding-top: 40px;
+	margin: 0px;
 	display: block;
 	text-align: center;
 }
@@ -56,11 +55,12 @@ div.wrap.blue div.css_sprite_container.upper {
 div.wrap.blue div.css_sprite_container.upper div {
 	display: inline-block;
 	width: 200px;
-	padding-left: 100px;
-	padding-right: 0px;
-	color: white;
-	padding-bottom: 20px;
+
 	position: relative;
+
+	padding-left: 30px;
+	padding-right: 30px;
+	color: white;
 }
 
 div.wrap.blue div.css_sprite_container.upper span.sprite_bg {
@@ -137,7 +137,7 @@ div.wrap.white{
 div.wrap.white div.inner_wrap h1.solution{
 	display: block;
 	margin: 0;
-	padding-top: 250px;
+	padding-top: 150px;
 	color:#3B5997;
 	font-size: 1.7em;
 	text-align: center;
@@ -150,7 +150,7 @@ div.wrap.white div.inner_wrap h1.solution{
 	text-align: center;
 }
 
-div.wrap.white div.inner_wrap div.css_sprite_container_second span{
+div.wrap.white div.inner_wrap div.css_sprite_container_second div{
 	display: inline-block;
 	width: 207px;
 	height: 201px;
@@ -168,22 +168,22 @@ div.wrap.white div.inner_wrap div.css_sprite_container_second span{
 	text-align: center;
 }
 
- div.wrap.white div.inner_wrap div.css_sprite_container_second span:first-child{
+ div.wrap.white div.inner_wrap div.css_sprite_container_second div:first-child{
 	background-position: -626px 0px;
 }
 
-div.wrap.white div.inner_wrap div.css_sprite_container_second span:nth-child(2){
+div.wrap.white div.inner_wrap div.css_sprite_container_second div:nth-child(2){
 	background-position: -415px 0px;	
 }
 
- div.wrap.white div.inner_wrap div.css_sprite_container_second span:nth-child(3){
+ div.wrap.white div.inner_wrap div.css_sprite_container_second div:nth-child(3){
 	background-position: -205px 0px;	
 }
 
- div.wrap.white div.inner_wrap div.css_sprite_container_second span:last-child{
+ div.wrap.white div.inner_wrap div.css_sprite_container_second div:last-child{
 	background-position: 0px 0px;	
 }
- div.wrap.white div.inner_wrap div.css_sprite_container_second span h4{
+ div.wrap.white div.inner_wrap div.css_sprite_container_second div h4{
  	display: block;
  	margin: 0;
 	margin-top: 20px;
@@ -191,7 +191,7 @@ div.wrap.white div.inner_wrap div.css_sprite_container_second span:nth-child(2){
 	font-size: 1.4em
 }
 
- div.wrap.white div.inner_wrap div.css_sprite_container_second span p{
+ div.wrap.white div.inner_wrap div.css_sprite_container_second div p{
  	display: block;
  	margin: 0;
 	color: #3B5997;
@@ -565,10 +565,12 @@ div#content div.wrap.pricing.grey div.inner_wrap ul.top_plans_container li.plan_
 	vertical-align: top;
 	border-bottom: 1px solid;
 	list-style-type: none;
+	text-align: right;
 }
 
 body.ltr div#content div.wrap.pricing.grey div.inner_wrap ul.top_plans_container li.plan_box ul li {
 	background-position: right center;
+	text-align: left;
 }
 
 div#content div.wrap.pricing.grey div.inner_wrap ul.top_plans_container li.plan_box  div.plan_box_title h3 {
@@ -1468,4 +1470,22 @@ body.ltr div#content div.warp.privacy:after {
 	transform: rotate(5deg);
 	-ms-transform: rotate(5deg);
 	-webkit-transform: rotate(-5deg);
+}
+
+/**
+ * Home page info
+ */
+div#header_info div.article {
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+
+div#header_info h1 {
+	margin: 0px;
+	padding: 0px;
+	padding-bottom: 20px;
+}
+
+div#header_info ul li {
+	margin-bottom: 20px;
 }
