--- a/templates/demo.xml
+++ b/templates/demo.xml
@@ -2,17 +2,12 @@
 <!DOCTYPE document SYSTEM "../units/schema/template.dtd">
 <document>
 	<cms:var name="_DOCTYPE"/>
-	<html lang="$language" eval="lang">
+	<html lang="$language" cms:eval="lang">
 		<head>
 			<title><cms:text constant="site_title"/></title>
-			<cms:script src="_BASEURL.'/site/scripts/gallery.js'" eval="src"/>
+			<cms:script src="_BASEURL.'/site/scripts/gallery.js'" cms:eval="src"/>
 			<cms:collection include="dialog,animation_chain"/>
-			<link
-				href="http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700,400italic"
-				rel="stylesheet"
-				type="text/css"
-			/>
-			<cms:script src="_BASEURL.'/site/scripts/contact.js'" eval="src"/>
+			<cms:script src="_BASEURL.'/site/scripts/contact.js'" cms:eval="src"/>
 			<cms:module name="head_tag" action="print_tag"/>
 		</head>
 		<body style="padding: 0px; margin: 0px;">
