--- a/templates/privacy.xml
+++ b/templates/privacy.xml
@@ -2,21 +2,16 @@
 <!DOCTYPE document SYSTEM "../units/schema/template.dtd">
 <document>
 	<cms:var name="_DOCTYPE"/>
-	<html lang="$language" eval="lang">
+	<html lang="$language" cms:eval="lang">
 		<head>
 			<title><cms:text constant="site_title"/></title>
-			<cms:script src="_BASEURL.'/site/scripts/gallery.js'" eval="src"/>
+			<cms:script src="_BASEURL.'/site/scripts/gallery.js'" cms:eval="src"/>
 			<cms:collection include="dialog,animation_chain"/>
-			<link
-				href="http://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,700,400italic"
-				rel="stylesheet"
-				type="text/css"
-			/>
-		<cms:script src="_BASEURL.'/site/scripts/contact.js'" eval="src"/>
+			<cms:script src="_BASEURL.'/site/scripts/contact.js'" cms:eval="src"/>
 			<cms:module name="head_tag" action="print_tag"/>
 		</head>
 
-		<body class="$language_rtl ? 'rtl' : 'ltr'" eval="class">
+		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
 			<cms:template file="parts/header.xml"/>
 			<div id="content">
 				<div class="warp privacy">
