--- a/templates/features.xml
+++ b/templates/features.xml
@@ -4,7 +4,7 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/></title>
+			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="features"/></title>
 			<cms:script src="_BASEURL.'/site/scripts/gallery.js'" cms:eval="src"/>
 			<cms:collection include="dialog,animation_chain"/>
 			<cms:script src="_BASEURL.'/site/scripts/contact.js'" cms:eval="src"/>
@@ -12,6 +12,7 @@
 		</head>
 
 		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
+			<cms:raw file="parts/tagmanager.txt"/>
 			<cms:template file="parts/header.xml"/>
 			<div id="content">
 				<div class="wrap gray">
@@ -128,9 +129,7 @@
 									<cms:text constant="info_link"/>
 								</span>
 								<a
-									 href="'tel:'.urlencode(MainLanguageHandler::getInstance()->getText(''))"
-									 cms:eval="href" 
-									 class=""
+									 href="mailto:info@callbox.co.il"
 								>
 								<cms:text constant="email_features"/>
 							</a>
@@ -140,7 +139,7 @@
 									<cms:text constant="phone_number_text"/>
 								</span>
 								<a
-									 href="'tel:'.urlencode(MainLanguageHandler::getInstance()->getText(''))"
+									 href="'tel:'.urlencode(MainLanguageHandler::getInstance()->getText('phone_number'))"
 									 cms:eval="href" 
 									 class=""
 								>
