--- a/templates/home.xml
+++ b/templates/home.xml
@@ -4,7 +4,8 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/></title>
+			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="cta_header"/></title>
+			<meta name="google-site-verification" content="Pv1YbDZKyVvZqtE4WuRYQz0MlYLaHNOZIACwH8CBcQI" />
 			<cms:script src="_BASEURL.'/site/scripts/gallery.js'" cms:eval="src"/>
 			<cms:script src="_BASEURL.'/site/scripts/contact.js'" cms:eval="src"/>
 			<cms:collection include="dialog,animation_chain"/>
@@ -13,7 +14,7 @@
 
 		<body class="$language_rtl ? 'rtl' : 'ltr'" cms:eval="class">
 			<cms:template file="parts/header.xml"/>
-
+			<cms:raw file="parts/tagmanager.txt"/>
 			<div id="content">
 				<div class="wrap blue">
 					<div class="inner_wrap">
